--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         }
     },
     "extra": {
-        "attla": {
+        "laravel": {
             "providers": [
                 "Attla\\Flash\\ServiceProvider"
             ],
